Worked on contacts

--- a/Portfolioweb_Armas/contacts.html
+++ b/Portfolioweb_Armas/contacts.html
@@ -16,9 +16,42 @@
       <h1>Contacts</h1>
       <hr size="5" color="black" width="100%" />
     </header>
-    <section align="center">
-      <h2>Contact Information</h2>
+
+  <section align="center">
+      <table align="center">
+      <td>
+      <ul>
+        <li><b>Facebook:</b> <a href="https://www.facebook.com/armasmarkrainier">markrainierarmas</a></li>
+        <li><b>Gmail:</b> markrainierarmas@gmail.com</li>
+        <li><b>Phone Number:</b> 09625723130</li>
+        <li><b>Landline:</b> 0284039382</li>
+        <li><b>GitHub:</b> 0284039382</li>
+      </ul>
+    </td>
+  </table>
     </section>
+    <hr size="5" color="black" width="100%" />
+    <section align="center">
+      <h2>Contact Me</h2>
+      <table align="center" border="1" width="30%">
+        <td>
+          <form>
+            <label for="fname">First Name: </label> <br />
+            <input type="text" size="40" /> <br />
+            <label for="fname">Last Name: </label> <br />
+            <input type="text" size="40" /> <br />
+            <label for="fname">Email: </label> <br />
+            <input type="text" size="40" /> <br />
+            <label for="fname">Message: </label> <br />
+            <input type="text" size="40" /> <br />
+            <br />
+            <input type="Submit" /> <br />
+            <br />
+          </form>
+        </td>
+      </table>
+    </section>
+    <br>
 
     <hr size="5" color="black" width="100%" />
     <footer align="center">
