--- a/Portfolioweb_Armas/home.html
+++ b/Portfolioweb_Armas/home.html
@@ -27,31 +27,20 @@
       <h1>About Me</h1>
 
       <p>
-        My name is Mark Rainier Armas, and I am currently 20 years old. I am a <br>
-        dedicated third-year student at the Technological University of Manila, <br>
-        pursuing a Bachelor of Science in Information Systems. Throughout my <br>
-        studies, I have gained proficiency in various programming languages, <br>
-        including C++, C, and Java, which have provided me with a solid <br>
-        foundation in software development and problem-solving skills. <br>
+        My name is Mark Rainier Armas, a 20-year-old third-year student at the <br>
+        Technological University of Manila, pursuing a Bachelor of Science in <br>
+        Information Systems. I have gained proficiency in programming languages <br>
+        like C++, C, and Java, building a solid foundation in software <br>
+        development and problem-solving. <br>
       </p>
 
       <p>
-        In addition to my programming knowledge, I have experience in <br>
-        prototyping applications using FIGMA, which gives me an idea on how to <br>
-        effectively design and visualize user interfaces. This combination of <br>
-        technical skills and design understanding equips me to tackle diverse <br>
-        challenges in the field of information systems. I am eager to apply my <br>
-        learning in practical settings and contribute to innovative projects. <br>
-      </p>
-      <p>
-        So far, I am not yet well-versed in the programming languages I use; I <br>
-        just have a foundational understanding of them. However, I am eager to <br>
-        deepen my knowledge and enhance my skills through hands-on projects and <br>
-        practical applications. I believe that continuous learning and practice <br>
-        will help me become more proficient, allowing me to tackle more complex <br>
-        challenges and contribute effectively to team projects in the future. My <br>
-        goal is to build a strong expertise that will serve me well in my career <br>
-        in information systems.
+        While I have a foundational understanding of the programming languages I <br>
+        use, I’m motivated to deepen my knowledge through hands-on projects. I <br>
+        believe that continuous learning and practice will enhance my skills, <br>
+        enabling me to handle complex challenges and contribute to team projects <br>
+        effectively. My goal is to develop strong expertise for a successful <br>
+        career in information systems. <br>
       </p>
     </section>
 
