--- a/Portfolioweb_Armas/skills.html
+++ b/Portfolioweb_Armas/skills.html
@@ -25,6 +25,8 @@
             <li>Java</li>
             <li>Javascript</li>
             <li>CSS</li>
+            <li>Javascript</li>
+            <li>MySQL</li>
         </ul>
         <h2>Intermediate</h2>
         <ul>
@@ -33,8 +35,7 @@
         </ul>
         <h2>Advance</h2>
         <ul>
-            <li>HTML</li>
-            <li>Office Applications</li>
+            <li>None so far...</li>
             </ul>
     </main>
     <hr size="5" color="black" width="100%">
