Finalized all pages

--- a/Portfolioweb_Armas/projects.html
+++ b/Portfolioweb_Armas/projects.html
@@ -56,8 +56,8 @@
             </tr>
           </tbody>
         </table>
-
-        <a href="">Click Here to Project's Repository</a>
+        <br />
+        <a href="https://github.com/Armasss/My_College_Projects/tree/851ec5df081a55f146f93f8f160dfd55ae281931/Space%20Invaders">Click Here to Project's Repository</a>
       </section>
 
       <hr size="5" color="black" width="100%" />
@@ -105,11 +105,8 @@
             </tr>
           </tbody>
         </table>
-
-        <a
-          href="https://github.com/Armasss/My_College_Projects/tree/6b60443de9db62c40f66389b1dc99689fcfdb54d/Simple%20ATM%20Program"
-          >Click Here to Project's Repository</a
-        >
+        <br />
+        <a href="https://github.com/Armasss/My_College_Projects/tree/851ec5df081a55f146f93f8f160dfd55ae281931/Simple%20ATM%20Program">Click Here for the Project's Repository</a>
       </section>
 
       <hr size="5" color="black" width="100%" />
@@ -157,11 +154,8 @@
             </tr>
           </tbody>
         </table>
-
-        <a
-          href="https://github.com/Armasss/My_College_Projects/tree/6b60443de9db62c40f66389b1dc99689fcfdb54d/Encryption_Decryption%20of%20txt"
-          >Click Here to Project's Repository</a
-        >
+        <br />
+        <a href="https://github.com/Armasss/My_College_Projects/tree/851ec5df081a55f146f93f8f160dfd55ae281931/Encryption_Decryption%20of%20txt">Click Here for the Project's Repository</a>
       </section>
 
       <hr size="5" color="black" width="100%" />
@@ -202,10 +196,7 @@
 
         <br />
 
-        <a
-          href="https://github.com/Armasss/My_College_Projects/tree/6b60443de9db62c40f66389b1dc99689fcfdb54d/Student%20Record%20System"
-          >Click Here to Project's Repository</a
-        >
+        <a href="https://github.com/Armasss/My_College_Projects/tree/851ec5df081a55f146f93f8f160dfd55ae281931/Student%20Record%20System">Click Here for the Project's Repository</a>
       </section>
 
       <hr size="5" color="black" width="100%" />
