--- a/Portfolioweb_Armas/skills.html
+++ b/Portfolioweb_Armas/skills.html
@@ -18,7 +18,9 @@
         <hr size="5" color="black" width="100%">
     </header>
     <main>
-        <h2>Beginner</h2>
+        <table align="center">
+        <td>
+        <h2 align="center">Beginner</h2>
         <ul>
             <li>C</li>
             <li>C++</li>
@@ -28,15 +30,17 @@
             <li>Javascript</li>
             <li>MySQL</li>
         </ul>
-        <h2>Intermediate</h2>
+        <h2 align="center">Intermediate</h2>
         <ul>
         <li>HTML</li>
         <li>Office Applications</li>
         </ul>
-        <h2>Advance</h2>
+        <h2 align="center">Advance</h2>
         <ul>
-            <li>None so far...</li>
+            <li>Still learning...</li>
             </ul>
+        </td>
+        </table>
     </main>
     <hr size="5" color="black" width="100%">
 
