Readme, finalized html
Did readme

--- a/Portfolioweb_Armas/home.html
+++ b/Portfolioweb_Armas/home.html
@@ -6,6 +6,7 @@
     <title>Armas Simple Portfolio</title>
   </head>
   <body bgcolor="#FFCA28">
+    
     <header align="center">
       <nav>
         <a href="home.html">Home</a> | <a href="projects.html">Projects</a> |
@@ -16,6 +17,7 @@
       <h1>Welcome!</h1>
       <hr size="5" color="black" width="100%" />
     </header>
+
     <section align="center">
       <img src="images/mypicture.jpg" width="300" alt="picture ko" />
       <p>Hello I am Mark R. Armas and welcome to my portfolio website!</p>
@@ -27,11 +29,10 @@
       <h1>About Me</h1>
 
       <p>
-        My name is Mark Rainier Armas, a 20-year-old third-year student at the <br>
-        Technological University of Manila, pursuing a Bachelor of Science in <br>
-        Information Systems. I have gained proficiency in programming languages <br>
-        like C++, C, and Java, building a solid foundation in software <br>
-        development and problem-solving. <br>
+        I am a 20-year-old third-year student at the Technological University of <br>
+        Manila, pursuing a Bachelor of Science in Information Systems. I have <br>
+        gained proficiency in programming languages like C++, C, and Java, <br>
+        building a solid foundation in software development and problem-solving. <br>
       </p>
 
       <p>
@@ -40,7 +41,7 @@
         believe that continuous learning and practice will enhance my skills, <br>
         enabling me to handle complex challenges and contribute to team projects <br>
         effectively. My goal is to develop strong expertise for a successful <br>
-        career in information systems. <br>
+        career in information systems.
       </p>
     </section>
 
@@ -50,6 +51,5 @@
       <p>© 2024 Mark Rainier Armas. All rights reserved.</p>
       <a href="https://github.com/Armasss">GitHub</a>
     </footer>
-    
   </body>
 </html>
