--- a/Portfolioweb_Armas/projects.html
+++ b/Portfolioweb_Armas/projects.html
@@ -6,6 +6,7 @@
     <title>My Projects</title>
   </head>
   <body bgcolor="#FFCA28">
+    
     <header align="center">
       <nav>
         <a href="home.html">Home</a> | <a href="projects.html">Projects</a> |
@@ -96,10 +97,18 @@
               <td>Array Implementation of List</td>
               <td>
                 <ul>
-                  <li>stdio.h</li>
+                  <li>iostream</li>
                   <li>stdlib.h</li>
-                  <li>conio.h</li>
+                  <li>fstream</li>
+                  <li>sstream</li>
+                  <li>iomanip</li>
+                  <li>cstring</li>
+                  <li>time.h</li>
                   <li>windows.h</li>
+                  <li>sys/stat.h</li>
+                  <li>conio.h</li>
+                  <li>cmath</li>
+                  <li>cctype</li>
                 </ul>
               </td>
             </tr>
