--- a/Portfolioweb_Armas/skills.html
+++ b/Portfolioweb_Armas/skills.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body bgcolor="#FFCA28">
+    
     <header align="center">
         <nav>
             <a href="home.html">Home</a> |
@@ -17,34 +18,46 @@
         <h1>SKILLS</h1>
         <hr size="5" color="black" width="100%">
     </header>
+
     <main>
-        <table align="center">
-        <td>
-        <h2 align="center">Beginner</h2>
-        <ul>
-            <li>C</li>
-            <li>C++</li>
-            <li>Java</li>
-            <li>Javascript</li>
-            <li>CSS</li>
-            <li>Javascript</li>
-            <li>MySQL</li>
-        </ul>
-        <h2 align="center">Intermediate</h2>
-        <ul>
-        <li>HTML</li>
-        <li>Office Applications</li>
-        </ul>
-        <h2 align="center">Advance</h2>
-        <ul>
-            <li>Still learning...</li>
-            </ul>
-        </td>
+        <table align="center" border="1" width="50%">
+            <theader>
+                <tr>
+                <th>Beginner</th>
+                <th>Intermediate</th>
+                <th>Advance</th>
+                </tr>
+            </theader>
+            <tbody>
+            <tr>
+                <td>
+                    <ul>
+                        <li>Java</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                        <li>Figma</li>
+                        <li>MySQL</li>
+                    </ul>
+                </td>
+
+                <td>
+                    <ul>
+                        <li>C</li>
+                        <li>C++</li>
+                        <li>HTML</li>
+                        <li>Office Applications</li>
+                        <li>Canva</li>
+                    </ul>
+                </td>
+                <td>
+                    <p align="center">I unfortunately do not have any skills or knowledge area that I can call myself an expert.</p>
+                </td>
+            </tr>
+            </tbody>
         </table>
     </main>
+    
     <hr size="5" color="black" width="100%">
-
-
 
     <footer align="center">
         <p>© 2024 Mark Rainier Armas. All rights reserved.</p>
