Format document with prettier

--- a/Portfolioweb_Armas/home.html
+++ b/Portfolioweb_Armas/home.html
@@ -6,7 +6,6 @@
     <title>Armas Simple Portfolio</title>
   </head>
   <body bgcolor="#FFCA28">
-    
     <header align="center">
       <nav>
         <a href="home.html">Home</a> | <a href="projects.html">Projects</a> |
@@ -29,18 +28,41 @@
       <h1>About Me</h1>
 
       <p>
-        I am a 20-year-old third-year student at the Technological University of <br>
-        Manila, pursuing a Bachelor of Science in Information Systems. I have <br>
-        gained proficiency in programming languages like C++, C, and Java, <br>
-        building a solid foundation in software development and problem-solving. <br>
+        I am a 20-year-old third-year student at the Technological University of
+        <br />
+        Manila, pursuing a Bachelor of Science in Information Systems. I have
+        <br />
+        gained proficiency in programming languages like C++, C, and Java,
+        <br />
+        building a solid foundation in software development and problem-solving.
+        <br />
       </p>
 
       <p>
-        While I have a foundational understanding of the programming languages I <br>
-        use, I’m motivated to deepen my knowledge through hands-on projects. I <br>
-        believe that continuous learning and practice will enhance my skills, <br>
-        enabling me to handle complex challenges and contribute to team projects <br>
-        effectively. My goal is to develop strong expertise for a successful <br>
+        In addition to my programming knowledge, I have experience in <br />
+        prototyping applications using FIGMA, which gives me an idea on how to
+        <br />
+        effectively design and visualize user interfaces. This combination of
+        <br />
+        technical skills and design understanding equips me to tackle diverse
+        <br />
+        challenges in the field of information systems. I am eager to apply my
+        <br />
+        learning in practical settings and contribute to innovative projects.
+        <br />
+      </p>
+
+      <p>
+        While I have a foundational understanding of the programming languages I
+        <br />
+        use, I’m motivated to deepen my knowledge through hands-on projects. I
+        <br />
+        believe that continuous learning and practice will enhance my skills,
+        <br />
+        enabling me to handle complex challenges and contribute to team projects
+        <br />
+        effectively. My goal is to develop strong expertise for a successful
+        <br />
         career in information systems.
       </p>
     </section>
