--- a/Portfolioweb_Armas/projects.html
+++ b/Portfolioweb_Armas/projects.html
@@ -6,7 +6,6 @@
     <title>My Projects</title>
   </head>
   <body bgcolor="#FFCA28">
-    
     <header align="center">
       <nav>
         <a href="home.html">Home</a> | <a href="projects.html">Projects</a> |
@@ -58,7 +57,10 @@
           </tbody>
         </table>
         <br />
-        <a href="https://github.com/Armasss/My_College_Projects/tree/851ec5df081a55f146f93f8f160dfd55ae281931/Space%20Invaders">Click Here to Project's Repository</a>
+        <a
+          href="https://github.com/Armasss/My_College_Projects/tree/851ec5df081a55f146f93f8f160dfd55ae281931/Space%20Invaders"
+          >Click Here to Project's Repository</a
+        >
       </section>
 
       <hr size="5" color="black" width="100%" />
@@ -115,7 +117,10 @@
           </tbody>
         </table>
         <br />
-        <a href="https://github.com/Armasss/My_College_Projects/tree/851ec5df081a55f146f93f8f160dfd55ae281931/Simple%20ATM%20Program">Click Here for the Project's Repository</a>
+        <a
+          href="https://github.com/Armasss/My_College_Projects/tree/851ec5df081a55f146f93f8f160dfd55ae281931/Simple%20ATM%20Program"
+          >Click Here for the Project's Repository</a
+        >
       </section>
 
       <hr size="5" color="black" width="100%" />
@@ -164,7 +169,10 @@
           </tbody>
         </table>
         <br />
-        <a href="https://github.com/Armasss/My_College_Projects/tree/851ec5df081a55f146f93f8f160dfd55ae281931/Encryption_Decryption%20of%20txt">Click Here for the Project's Repository</a>
+        <a
+          href="https://github.com/Armasss/My_College_Projects/tree/851ec5df081a55f146f93f8f160dfd55ae281931/Encryption_Decryption%20of%20txt"
+          >Click Here for the Project's Repository</a
+        >
       </section>
 
       <hr size="5" color="black" width="100%" />
@@ -205,7 +213,10 @@
 
         <br />
 
-        <a href="https://github.com/Armasss/My_College_Projects/tree/851ec5df081a55f146f93f8f160dfd55ae281931/Student%20Record%20System">Click Here for the Project's Repository</a>
+        <a
+          href="https://github.com/Armasss/My_College_Projects/tree/851ec5df081a55f146f93f8f160dfd55ae281931/Student%20Record%20System"
+          >Click Here for the Project's Repository</a
+        >
       </section>
 
       <hr size="5" color="black" width="100%" />
