--- a/Portfolioweb_Armas/index.html
+++ b/Portfolioweb_Armas/index.html
@@ -8,7 +8,8 @@
   <body bgcolor="#FFCA28">
     <header align="center">
       <nav>
-        <a href="home.html">Home</a> | <a href="projects.html">Projects</a> |
+        <a href="index.html">Home</a> | 
+        <a href="projects.html">Projects</a> |
         <a href="skills.html">Skills</a> |
         <a href="contacts.html">Contacts</a>
       </nav>
