--- a/Portfolioweb_Armas/projects.html
+++ b/Portfolioweb_Armas/projects.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Projects</title>
+    <title>Armas Simple Portfolio</title>
   </head>
   <body bgcolor="#FFCA28">
     <header align="center">
       <nav>
-        <a href="home.html">Home</a> | <a href="projects.html">Projects</a> |
+        <a href="index.html">Home</a> | 
+        <a href="projects.html">Projects</a> |
         <a href="skills.html">Skills</a> |
         <a href="contacts.html">Contacts</a>
       </nav>
